<resources>
    <string name="app_name">OnlineEducation</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_create_your_account">don\'t have an account? </string>
    <string name="create_your_account">Create your account</string>
    <string name="already_have_an_account">Already have an Account? </string>
    <string name="login">Login</string>
    <string name="enter_email_id"> email id</string>
    <string name="enter_mobile_number"> mobile number</string>
    <string name="enter_password"> password</string>
    <string name="Login">Login</string>
    <string name="enter_name_of_user"> name</string>
    <string name="submit">Submit</string>
    <string name="enter_profession"> profession</string>
    <string name="please_enter_the_email_id_enter_your_mobile_number">please enter the email id? <font color="#FF1493">Enter your mobile number</font></string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username"> Email / Mobile Number</string>

    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <string name="water_scarcity_or_lack_of_safe_drinking_water_is_one_of_the_world_s_leading_problems_affecting_more_than_1_1_billion_people_globally_meaning_that_one_in_every_six_people_lacks_access_to_safe_water">Water scarcity or lack of safe drinking water is one of the world\'s leading problems affecting more than 1.1 billion people globally, meaning that one in every six people lacks access to safe water</string>
    <string name="forgot_password">forgot password?</string>
    <string name="online_education">Online Education</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
</resources>